--- a/.github/workflows/generate-token-from-issue.yml
+++ b/.github/workflows/generate-token-from-issue.yml
@@ -11,7 +11,7 @@ jobs:
     name: Issue To Pr
     runs-on: ubuntu-latest
     outputs:
-      branch-name: new-token/${{ steps.issue-parser.outputs.issueparser_address1 }}-${{ steps.issue-parser.outputs.issueparser_address2 }}
+      branch-name: new-token/${{ steps.issue-parser.outputs.issueparser_address1 }}
       pr-number: ${{ steps.create-pr.outputs.pull-request-number }}
     steps:
       - uses: actions/checkout@v3
@@ -70,31 +70,3 @@ jobs:
           add-paths: scroll.tokenlist.json
           labels: |
             new token
-
-  duplicate-detection:
-    name: Duplicate Detection
-    runs-on: ubuntu-latest
-    needs: issue-to-pr
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-          ref: ${{ needs.issue-to-pr.outputs.branch-name }}
-
-      - name: Use Node.js 16.x
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16.x
-
-      - name: Install dependencies
-        run: yarn
-
-      - name: Run Check Script
-        id: validate-token-list
-        run: node scripts/checkDuplication.mjs
-
-      - name: Mark Issue Error
-        if: steps.validate-token-list.outcome == 'failure'
-        uses: andymckay/labeler@1.0.4
-        with:
-          add-labels: 'validation failure'
