--- a/.github/workflows/generate-token-from-issue.yml
+++ b/.github/workflows/generate-token-from-issue.yml
@@ -63,10 +63,24 @@ jobs:
         with:
           title: '[New NFT Token]: ${{ steps.issue-parser.outputs.issueparser_address1 }} & ${{ steps.issue-parser.outputs.issueparser_address2 }}'
           body: 'Refer Issue: #${{ github.event.issue.number }}'
-          commit-message: please add token map for L1:${{ steps.issue-parser.outputs.issueparser_address1 }} and L2:${{ steps.issue-parser.outputs.issueparser_address2 }} on ${{ steps.issue-parser.outputs.issueparser_scrollEnvironment }}
+          commit-message: add new token
           base: ${{ steps.parse-token.outputs.scrollEnvironment }}
           branch: new-token/${{ steps.issue-parser.outputs.issueparser_address1 }}
           delete-branch: true
           add-paths: scroll.tokenlist.json
           labels: |
             new token
+
+      - name: Show Token Map Info
+        uses: thollander/actions-comment-pull-request@v2
+        with:
+          message: |
+            - [ ] please add token map
+
+            | env | ${{ steps.parse-token.outputs.scrollEnvironment }} |
+            | ------------- | ------------- |
+            | tokenType | ${{ steps.issue-parser.outputs.issueparser_tokenType }} |
+            | L1  | ${{ steps.issue-parser.outputs.issueparser_address1 }} |
+            | L2  | ${{ steps.issue-parser.outputs.issueparser_address2 }} |
+          comment_tag: tokenMap
+          pr_number: ${{needs.issue-to-pr.outputs.pr-number}}
