--- a/.github/workflows/generate-token-from-issue.yml
+++ b/.github/workflows/generate-token-from-issue.yml
@@ -75,12 +75,22 @@ jobs:
         id: duplicate-detection
         run: node scripts/checkDuplication.mjs
 
+      - uses: actions/github-script@v5
+        with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          script: |
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: '👋 Thanks for reporting!'
+            })
       - name: Show Token Map Info
         if: success()
         uses: thollander/actions-comment-pull-request@v2
         with:
           message: |
-            please add token map \n env: ${{ steps.parse-token.outputs.scrollEnvironment }} \n tokenType: ${{ steps.issue-parser.outputs.issueparser_tokenType }} \n L1: ${{ steps.issue-parser.outputs.issueparser_address1 }} \n L2: ${{ steps.issue-parser.outputs.issueparser_address2 }}
+            add token map
           comment_tag: tokenMap
           pr_number: ${{needs.issue-to-pr.outputs.pr-number}}
 
