--- a/.github/workflows/generate-token-from-issue.yml
+++ b/.github/workflows/generate-token-from-issue.yml
@@ -13,6 +13,9 @@ jobs:
     outputs:
       branch-name: new-token/${{ steps.issue-parser.outputs.issueparser_address1 }}
       pr-number: ${{ steps.create-pr.outputs.pull-request-number }}
+      address1: ${{ steps.issue-parser.outputs.issueparser_address1 }}
+      address2: ${{ steps.issue-parser.outputs.issueparser_address2 }}
+      token-type: ${{ steps.issue-parser.outputs.issueparser_tokenType }}
     steps:
       - uses: actions/checkout@v3
         with:
@@ -71,36 +74,50 @@ jobs:
           labels: |
             new token
 
+  duplicate-detection:
+    name: Duplicate Detection
+    runs-on: ubuntu-latest
+    needs: issue-to-pr
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          ref: ${{ needs.issue-to-pr.outputs.branch-name }}
+
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16.x
+
+      - name: Install dependencies
+        run: yarn
+
       - name: Run Duplicate Detection Script
         id: duplicate-detection
         run: node scripts/checkDuplication.mjs
 
       - name: Show Token Map Info
-        if: success()
+        if: steps.duplicate-detection.outputs.duplicated == 'false'
         uses: thollander/actions-comment-pull-request@v2
         with:
           message: |
-            - [ ] please add token map
-
-            | env | ${{ steps.parse-token.outputs.scrollEnvironment }} |
-            | ------------- | ------------- |
-            | tokenType | ${{ steps.issue-parser.outputs.issueparser_tokenType }} |
-            | L1  | ${{ steps.issue-parser.outputs.issueparser_address1 }} |
-            | L2  | ${{ steps.issue-parser.outputs.issueparser_address2 }} |
-          comment_tag: tokenMap
+            - [] please add token map \n 
+            env: ${{ vars.GITHUB_BASE_REF }} \n 
+            tokenType: ${{ needs.issue-to-pr.outputs.token-type }} \n 
+            L1: ${{ needs.issue-to-pr.outputs.address1 }} \n 
+            L2: ${{ needs.issue-to-pr.outputs.address2 }} \n
           pr_number: ${{needs.issue-to-pr.outputs.pr-number}}
 
       - name: Show Error Message
-        if: steps.duplicate-detection.outcome == 'failure'
+        if: steps.duplicate-detection.outputs.duplicated == 'true'
         uses: thollander/actions-comment-pull-request@v2
         with:
           message: |
             Duplicate contract address detected, please update.
-          comment_tag: tokenMap
           pr_number: ${{needs.issue-to-pr.outputs.pr-number}}
 
       - name: Mark Pr Not Ready
-        if: steps.duplicate-detection.outcome == 'failure'
+        if: steps.duplicate-detection.outputs.duplicated == 'true'
         uses: andymckay/labeler@1.0.4
         with:
           add-labels: 'need update'
